--- a/style.css
+++ b/style.css
@@ -105,7 +105,7 @@ Therefore, we want our media queries in descending order, so that the most recen
   .about__box--center{
   width: 94%;
   background-color: orangered;
-  color:aliceblue;
+  color:rgb(229, 230, 231);
   }
   .btn{
     display:grid;
@@ -163,9 +163,10 @@ Therefore, we want our media queries in descending order, so that the most recen
 .about__box--center {
   background-color: yellow;
   width: 91%;
+  color: black;
 }
 .about{
-  margin: 0 25px; 
+ margin: 0 25px; 
  background-color: green;
  padding: 15px 0;
 }
@@ -207,6 +208,7 @@ Therefore, we want our media queries in descending order, so that the most recen
     display: grid;
     width: fit-content;
     font-size: 19.5px;
+    color: black;
  }
  .btn{
   display: none;
